fix: ⚡️ tz icon + button small variant

--- a/src/atoms/button/index.module.scss
+++ b/src/atoms/button/index.module.scss
@@ -5,10 +5,14 @@
   @include resetButton();
   font-family: var(--text-font);
   word-break: normal;
-  font-size: $font-small;
+  font-size: $font-body;
 
   &.fit {
     display: contents;
+  }
+
+  &.small {
+    font-size: $font-small;
   }
 
   &.disabled,
